# libosrs

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  gamemode.rs  hiscore.rs  lib.rs  main.rs  player.rs  skill.rs
src/util/: combatlvl.rs  mod.rs
