[package]
name = "libosrs"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "An Oldschool Runescape API written in Rust"
repository = "https://github.com/phongse/libosrs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
csv = "1.1"
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
